SAK-17094 fix the findbugs low hanging fruit
git-svn-id: https://source.sakaiproject.org/svn/edu-services/trunk@67139 66ffb92e-73f9-0310-93c1-f5514f145a0a